# ansible-devcontainer

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer.yaml
