[tool.poetry]
name = "ansible-devcontainer"
version = "0.1.0"
description = ""
authors = ["Lido Paglia <lido@temple.edu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "~=2.16"
ansible = "^10.6.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.5.0", markers = 'platform_system != "Windows"' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
